<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signup.view.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/ic_profile"
            app:civ_border_color="#FF000000"
            app:civ_border_width="0dp"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/backword_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="375dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/create_an_account_to_access_all_the_features_of_app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeColor="@color/blue_icon_bg"
            app:counterTextColor="@color/blue_icon_bg"
            app:cursorColor="@color/blue_icon_bg"
            app:helperTextTextColor="@color/blue_icon_bg"
            app:hintTextColor="@color/blue_icon_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_picture"
            app:placeholderTextColor="@color/blue_icon_bg"
            app:prefixTextColor="@color/blue_icon_bg"
            app:startIconDrawable="@drawable/ic_username"
            app:suffixTextColor="@color/blue_icon_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_et_shape"
                android:fontFamily="@font/roboto"
                android:hint="@string/user_name"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"
            app:boxStrokeColor="@color/blue_icon_bg"
            app:counterTextColor="@color/blue_icon_bg"
            app:cursorColor="@color/blue_icon_bg"
            app:helperTextTextColor="@color/blue_icon_bg"
            app:hintTextColor="@color/blue_icon_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_user_name"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue_icon_bg"
            app:placeholderTextColor="@color/blue_icon_bg"
            app:prefixTextColor="@color/blue_icon_bg"
            app:startIconDrawable="@drawable/ic_user_password"
            app:suffixTextColor="@color/blue_icon_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_et_shape"
                android:fontFamily="@font/roboto"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"
            app:boxStrokeColor="@color/blue_icon_bg"
            app:counterTextColor="@color/blue_icon_bg"
            app:cursorColor="@color/blue_icon_bg"
            app:helperTextTextColor="@color/blue_icon_bg"
            app:hintTextColor="@color/blue_icon_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue_icon_bg"
            app:placeholderTextColor="@color/blue_icon_bg"
            app:prefixTextColor="@color/blue_icon_bg"
            app:startIconDrawable="@drawable/ic_user_password"
            app:suffixTextColor="@color/blue_icon_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_et_shape"
                android:fontFamily="@font/roboto"
                android:hint="@string/renter_password"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/blue_icon_bg"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/et_re_password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_re_password"
            app:layout_constraintTop_toBottomOf="@+id/et_re_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>